# nattvakten

./: .env.example  .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
deploy/: 49-nattvakten-poweroff.rules  nattvakten-poweroff.path  nattvakten-poweroff.service  nattvakten-tmpfiles.conf  nattvakten-wol@.service  nattvakten.service
src/nattvakten/: __init__.py  app.py  config.py  leases.py  power.py
tests/: test_api.py
